--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   std_msgs
   message_generation
+  rospy
 )
 
 ## System dependencies are found with CMake's conventions
@@ -17,7 +18,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
 ## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
-# catkin_python_setup()
+ catkin_python_setup()
 
 ################################################
 ## Declare ROS messages, services and actions ##
@@ -183,3 +184,5 @@ add_dependencies(add_two_ints_server beginner_tutorials_gencpp)
 add_dependencies(add_two_ints_client beginner_tutorials_gencpp)
 add_dependencies(mult_by_two beginner_tutorials_gencpp)
 add_dependencies(randomizer beginner_tutorials_generate_messages_cpp)
+
+#install(PROGRAMS scripts/razor_imu DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
